fix: z-index edit task in board

--- a/css/style.css
+++ b/css/style.css
@@ -1434,7 +1434,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: 15;
+  z-index: 20;
   display: flex;
   justify-content: center;
   align-items: center;
