--- a/scss/_board.scss
+++ b/scss/_board.scss
@@ -203,7 +203,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba($color: #000000, $alpha: 0.2);
-    z-index: 15;
+    z-index: 20;
     display: flex;
     justify-content: center;
     align-items: center;
